--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ History of VietNam/.settings/
 History of VietNam/bin/
 History of VietNam/target/
 History of VietNam/.project
+History of VietNam/.idea/
