--- a/History of VietNam/pom.xml
+++ b/History of VietNam/pom.xml
@@ -64,5 +64,10 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>jSoupWebCrawler</groupId>
+			<artifactId>jSoupWebCrawler</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
